DATA-1497 Java 21 migration